@@ -142,8 +142,8 @@ Don't touch these lines:
                                 <option>/findstring:"filterstring"</option> fills in the filter text,
                                 <option>/findtext</option> forces the filter to use text, not regex, or
                                 <option>/findregex</option> forces the filter to use regex, not simple text search, and
-                                <option>/findtype:X</option> with X being a number between 1 and 7. The numbers
-                                correspond to:
+                                <option>/findtype:X</option> with X being a number between 1 and 512. The numbers
+                                are the sum of the following options:
                                 <itemizedlist>
                                     <listitem>
                                         <para>
@@ -157,22 +157,37 @@ Don't touch these lines:
                                     </listitem>
                                     <listitem>
                                         <para>
-                                            <option>/findtype:3</option> filter by path
+                                            <option>/findtype:4</option> filter by path
                                         </para>
                                     </listitem>
                                     <listitem>
                                         <para>
-                                            <option>/findtype:4</option> filter by authors
+                                            <option>/findtype:8</option> filter by authors
                                         </para>
                                     </listitem>
                                     <listitem>
                                         <para>
-                                            <option>/findtype:5</option> filter by revisions
+                                            <option>/findtype:16</option> filter by revisions
                                         </para>
                                     </listitem>
                                     <listitem>
                                         <para>
-                                            <option>/findtype:7</option> filter by bug ID
+                                            <option>/findtype:32</option> filter by bug ID
+                                        </para>
+                                    </listitem>
+                                    <listitem>
+                                        <para>
+                                            <option>/findtype:64</option> filter case sensitive
+                                        </para>
+                                    </listitem>
+                                    <listitem>
+                                        <para>
+                                            <option>/findtype:128</option> filter by date
+                                        </para>
+                                    </listitem>
+                                    <listitem>
+                                        <para>
+                                            <option>/findtype:256</option> filter by date range
                                         </para>
                                     </listitem>
                                 </itemizedlist>
