@@ -8,6 +8,8 @@ Version 1.7.1
        commit dialog is wrong. (Stefan)
 - BUG: Issue #94: resolve conflict dialog
        resizing issues. (Stefan)
+- BUG: Issue #95: docs are wrong for log
+       filter automation. (Stefan)
 
 Version 1.7.0
 Too many changes to list here. See the release notes for
